argocd/applications/restate-example/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restate-example-sdk-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: restate-example
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: restate
      ports:
        - protocol: TCP
          port: 9080
